Change CSS reference to absolute path

--- a/site/pages/schedule.html
+++ b/site/pages/schedule.html
@@ -1,5 +1,5 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link type="text/css" rel="stylesheet" href="sheet.css" >
+<link type="text/css" rel="stylesheet" href="/sheet.css" >
 <style type="text/css">
 .ritz .waffle a { color: inherit; }
 .ritz .waffle .s0{background-color:#ffffff;text-align:center;font-weight:bold;color:#000000;font-family:'Arial';font-size:10pt;vertical-align:top;white-space:nowrap;direction:ltr;padding:2px 3px 2px 3px;}
