Preparing to publish schedule. Added link in menus

--- a/site/pages/schedule.html
+++ b/site/pages/schedule.html
@@ -184,3 +184,4 @@
 <td class="s5" dir="ltr">18:10</td><td class="s15" dir="ltr"></td><td class="s33" dir="ltr"></td><td></td><td class="s18" dir="ltr"></td><td class="s18" dir="ltr"></td><td class="s18" dir="ltr"></td><td></td><td></td><td></td></tr><tr style='height:20px;'>
 <td class="s5" dir="ltr">18:15</td><td></td><td class="s31" dir="ltr"></td><td></td><td class="s18" dir="ltr"></td><td class="s18" dir="ltr"></td><td class="s18" dir="ltr"></td><td></td><td></td><td></td></tr>
 </tbody></table></div>
+<p style="font-weight: bold; color: red;">Subject to change without notice.</p>
