--- a/site/pages/schedule.html
+++ b/site/pages/schedule.html
@@ -50,7 +50,7 @@
 <td class="s1" dir="ltr">Day 2 - Track 3</td><td></td><td class="s4" dir="ltr">Intermediate Level</td></tr><tr style='height:20px;'>
 <td class="s5" dir="ltr">07:30</td><td class="s6" dir="ltr" colspan="3" rowspan="6">PyGirl</td><td class="s1" dir="ltr" colspan="3" rowspan="6"></td><td></td><td class="s7" dir="ltr">Advanced level</td></tr><tr style='height:20px;'>
 <td class="s5" dir="ltr">07:35</td><td></td><td class="s8" dir="ltr">All Levels</td></tr><tr style='height:20px;'>
-<td class="s5" dir="ltr">07:40</td><td></td><td class="s9" dir="ltr">Green: Networking, Rest and Transitios</td></tr><tr style='height:20px;'>
+<td class="s5" dir="ltr">07:40</td><td></td><td class="s9" dir="ltr">Green: Networking, Rest and Transitions</td></tr><tr style='height:20px;'>
 <td class="s5" dir="ltr">07:45</td><td></td><td class="s10" dir="ltr">Yellow: Other activities</td></tr><tr style='height:20px;'>
 <td class="s5" dir="ltr">07:50</td><td></td><td class="s11" dir="ltr">Blue Text: Thai Language</td></tr><tr style='height:20px;'>
 <td class="s5" dir="ltr">07:55</td><td></td><td class="s8" dir="ltr"></td></tr><tr style='height:20px;'>
