Add some meta tags
See https://www.getnikola.com/handbook.html#html-meta-tags

--- a/site/pages/schedule.html
+++ b/site/pages/schedule.html
@@ -1,4 +1,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="date" content="2018-05-23 22:28" />
+<meta name="summary" content="Conference Programme" />
 <!-- <link type="text/css" rel="stylesheet" href="/sheet.css" > -->
 <style type="text/css">
 .ritz .waffle a { color: inherit; }
