--- a/site/pages/schedule.html
+++ b/site/pages/schedule.html
@@ -48,13 +48,13 @@
 <td class="s0" dir="ltr"></td><td class="s1" dir="ltr" colspan="3">June 16</td><td class="s2" dir="ltr" rowspan="129"></td><td class="s1" dir="ltr" colspan="3">June 17</td><td></td><td class="s3" dir="ltr">Beginner Level</td></tr><tr style='height:20px;'>
 <td class="s0" dir="ltr">Time</td><td class="s1" dir="ltr">Day 1 - Track 1</td><td class="s1" dir="ltr">Day 1 - Track 2</td><td class="s1" dir="ltr">Day 1 - Track 3</td><td class="s1" dir="ltr">Day 2 - Track 1</td><td class="s1" dir="ltr">Day 2 - Track 2</td>
 <td class="s1" dir="ltr">Day 2 - Track 3</td><td></td><td class="s4" dir="ltr">Intermediate Level</td></tr><tr style='height:20px;'>
-<td class="s5" dir="ltr">07:30</td><td class="s6" dir="ltr" colspan="3" rowspan="6">PyGirl</td><td class="s1" dir="ltr" colspan="3" rowspan="6"></td><td></td><td class="s7" dir="ltr">Advanced level</td></tr><tr style='height:20px;'>
+<td class="s5" dir="ltr">07:30</td><td class="s6" dir="ltr" colspan="3" rowspan="6">PyLadies</td><td class="s1" dir="ltr" colspan="3" rowspan="6"></td><td></td><td class="s7" dir="ltr">Advanced level</td></tr><tr style='height:20px;'>
 <td class="s5" dir="ltr">07:35</td><td></td><td class="s8" dir="ltr">All Levels</td></tr><tr style='height:20px;'>
 <td class="s5" dir="ltr">07:40</td><td></td><td class="s9" dir="ltr">Green: Networking, Rest and Transitions</td></tr><tr style='height:20px;'>
 <td class="s5" dir="ltr">07:45</td><td></td><td class="s10" dir="ltr">Yellow: Other activities</td></tr><tr style='height:20px;'>
 <td class="s5" dir="ltr">07:50</td><td></td><td class="s11" dir="ltr">Blue Text: Thai Language</td></tr><tr style='height:20px;'>
 <td class="s5" dir="ltr">07:55</td><td></td><td class="s8" dir="ltr"></td></tr><tr style='height:20px;'>
-<td class="s5" dir="ltr">08:00</td><td class="s12" dir="ltr" colspan="3" rowspan="12">Registration - Welcome coffee / PyGirl</td><td class="s12" dir="ltr" colspan="3" rowspan="14">Welcome Coffee</td><td></td><td></td></tr><tr style='height:20px;'>
+<td class="s5" dir="ltr">08:00</td><td class="s12" dir="ltr" colspan="3" rowspan="12">Registration - Welcome coffee / PyLadies</td><td class="s12" dir="ltr" colspan="3" rowspan="14">Welcome Coffee</td><td></td><td></td></tr><tr style='height:20px;'>
 <td class="s5" dir="ltr">08:05</td><td></td><td></td></tr><tr style='height:20px;'>
 <td class="s5" dir="ltr">08:10</td><td></td><td></td></tr><tr style='height:20px;'>
 <td class="s5" dir="ltr">08:15</td><td></td><td></td></tr><tr style='height:20px;'>
@@ -185,3 +185,4 @@
 <td class="s5" dir="ltr">18:15</td><td></td><td class="s31" dir="ltr"></td><td></td><td class="s18" dir="ltr"></td><td class="s18" dir="ltr"></td><td class="s18" dir="ltr"></td><td></td><td></td><td></td></tr>
 </tbody></table></div>
 <p style="font-weight: bold; color: red;">Subject to change without notice.</p>
+
