--- a/site/pages/schedule.html
+++ b/site/pages/schedule.html
@@ -159,7 +159,7 @@
 <tr style='height:20px;'><td class="s5" dir="ltr">17:25</td><td></td><td></td></tr>
 <tr style='height:20px;'><td class="s5" dir="ltr">17:30</td><td></td><td></td></tr>
 <tr style='height:20px;'><td class="s5" dir="ltr">17:35</td><td></td><td></td></tr>
-<tr style='height:20px;'><td class="s5" dir="ltr">17:40</td><td class="s28" dir="ltr" colspan="3" rowspan="width3">Closing</td><td></td><td></td></tr>
+<tr style='height:20px;'><td class="s5" dir="ltr">17:40</td><td class="s28" dir="ltr" colspan="3" rowspan="3">Closing</td><td></td><td></td></tr>
 <tr style='height:20px;'><td class="s5" dir="ltr">17:45</td><td></td><td></td></tr>
 <tr style='height:20px;'><td class="s5" dir="ltr">17:50</td><td></td><td></td></tr>
 <tr style='height:20px;'><td class="s5" dir="ltr">17:55</td><td class="s18" dir="ltr"></td><td class="s18" dir="ltr"></td><td class="s18" dir="ltr"></td><td></td><td></td></tr>
