Typo in schedule page, added post informing schedule is out

--- a/site/pages/schedule.html
+++ b/site/pages/schedule.html
@@ -170,7 +170,7 @@
 <tr style='height:20px;'><td class="s5" dir="ltr">18:20</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 </tbody></table></div>
 <p style="font-weight: bold; color: red;width: 942px;">Subject to change without notice.</p>
-<p style="width: 942px;">The more astute amonst our readers will have notice a number of Monty Python references. As you know (and if you don't you really should!),
+<p style="width: 942px;">The more astute amonst our readers will have noticed a number of Monty Python references. As you know (and if you don't you really should!),
 the name, <span style="font-weight: bold;">Python</span>  comes from the BBC show <a href="https://en.wikipedia.org/wiki/Monty_Python%27s_Flying_Circus">Monty Python Flying Circus</a> and
 has nothing to do with those reptiles causing <a href="https://en.wikipedia.org/wiki/Formication">formication</a>.
 In honour of this, we shall have a <span style="font-weight: bold;">Monty Python Quiz</span> during the conference. Details will follow.</p>
