--- a/site/pages/schedule.html
+++ b/site/pages/schedule.html
@@ -43,7 +43,7 @@
 <tr style='height:20px;'><td class="s5" dir="ltr">07:45</td><td></td><td class="s10" dir="ltr" style="font-size: 10px; font-weight: bold;">Registration</td></tr>
 <tr style='height:20px;'><td class="s5" dir="ltr">07:50</td><td></td><td class="s11" dir="ltr" style="font-size: 10px; font-weight: bold;">Blue Text: Thai Language</td></tr>
 <tr style='height:20px;'><td class="s5" dir="ltr">07:55</td><td></td><td class="s8" dir="ltr" style="background-color:#fff2cc; font-size: 10px; font-weight: bold;;">Other Events</td></tr>
-<tr style='height:20px;'><td class="s5" dir="ltr">08:00</td><td class="s12" dir="ltr" colspan="2" rowspan="12">Registration Opens / Welcome coffee</td><td class="s13" dir="ltr" rowspan="6">PyLadies</td><td></td><td></td></tr>
+<tr style='height:20px;'><td class="s5" dir="ltr">08:00</td><td class="s12" dir="ltr" colspan="2" rowspan="12">Registration Opens / Welcome Coffee</td><td class="s13" dir="ltr" rowspan="6">PyLadies</td><td></td><td></td></tr>
 <tr style='height:20px;'><td class="s5" dir="ltr">08:05</td><td></td><td></td></tr>
 <tr style='height:20px;'><td class="s5" dir="ltr">08:10</td><td></td><td></td></tr>
 <tr style='height:20px;'><td class="s5" dir="ltr">08:15</td><td></td><td></td></tr>
@@ -173,6 +173,6 @@
 <p style="width: 942px;">The more astute amonst our readers will have noticed a number of Monty Python references. As you know (and if you don't you really should!),
 the name, <span style="font-weight: bold;">Python</span>  comes from the BBC show <a href="https://en.wikipedia.org/wiki/Monty_Python%27s_Flying_Circus">Monty Python Flying Circus</a> and
 has nothing to do with those reptiles causing <a href="https://en.wikipedia.org/wiki/Formication">formication</a>.
-In honour of this, we shall have a <span style="font-weight: bold;">Monty Python Quiz</span> during the conference. A trial quiz <a jref="https://www.surveymonkey.com/r/9JJSMJG">can be taken here</a>.</p>
+In honour of this, we shall have a <span style="font-weight: bold;">Monty Python Quiz</span> during the conference. A trial quiz <a href="https://www.surveymonkey.com/r/9JJSMJG">can be taken here</a>.</p>
 <p style="width: 942px;">It's an "m" not an "n"! Shame on you!</p>
 <p style="width: 942px;">OK! We could have used "skin crawling". But what would be the fun in that?</p>
