--- a/site/pages/schedule.html
+++ b/site/pages/schedule.html
@@ -26,7 +26,7 @@
 .ritz .waffle .s10{background-color:#ffff00;text-align:left;color:#000000;font-family:'Arial';font-size:10pt;vertical-align:bottom;white-space:nowrap;direction:ltr;padding:2px 3px 2px 3px;}
 .ritz .waffle .s3{background-color:#c9daf8;text-align:left;color:#000000;font-family:'Arial';font-size:10pt;vertical-align:bottom;white-space:nowrap;direction:ltr;padding:2px 3px 2px 3px;}
 .ritz .waffle .s22{background-color:#d9d2e9;text-align:center;font-weight:bold;color:#000000;font-family:'Arial';font-size:10pt;vertical-align:middle;white-space:normal;overflow:hidden;word-wrap:break-word;direction:ltr;padding:2px 3px 2px 3px;}
-.ritz .waffle .s14{background-color:#e6b8af;text-align:center;font-weight:bold;color:#000000;font-family:'Arial';font-size:14pt;vertical-align:middle;white-space:normal;overflow:hidden;word-wrap:break-word;direction:ltr;padding:2px 3px 2px 3px;}
+.ritz .waffle .s14{background-color:#ffffff;text-align:center;font-weight:bold;color:#000000;font-family:'Arial';font-size:14pt;vertical-align:middle;white-space:normal;overflow:hidden;word-wrap:break-word;direction:ltr;padding:2px 3px 2px 3px;}
 .ritz .waffle .s25{background-color:#cfe2f3;text-align:center;font-weight:bold;color:#0000ff;font-family:'Arial';font-size:10pt;vertical-align:middle;white-space:normal;overflow:hidden;word-wrap:break-word;direction:ltr;padding:2px 3px 2px 3px;}
 .ritz .waffle .s32{background-color:#ffffff;text-align:left;font-weight:bold;color:#000000;font-family:'Arial';font-size:10pt;vertical-align:bottom;white-space:nowrap;direction:ltr;padding:2px 3px 2px 3px;}
 .ritz .waffle .s7{background-color:#d9d2e9;text-align:left;color:#000000;font-family:'Arial';font-size:10pt;vertical-align:bottom;white-space:nowrap;direction:ltr;padding:2px 3px 2px 3px;}
@@ -39,19 +39,19 @@
 <tbody>
 <tr><td class="s0" dir="ltr"></td><td class="s1" dir="ltr" colspan="3">June 16</td><td class="s2" dir="ltr" rowspan="129" style="width:30px"></td><td class="s1" dir="ltr" colspan="3">June 17</td><td></td><td class="s3" dir="ltr" style="font-size: 10px; font-weight: bold;">Beginner Level</td></tr>
 <tr style='height:20px;'><td class="s0" dir="ltr">Time</td><td class="s1" dir="ltr" style="width:220px">Day 1 - Track 1</td><td class="s1" dir="ltr" style="width:220px">Day 1 - Track 2</td><td class="s1" dir="ltr" style="width:220px">Day 1 - Track 3</td><td class="s1" dir="ltr" style="width:220px">Day 2 - Track 1</td><td class="s1" dir="ltr" style="width:220px">Day 2 - Track 2</td><td class="s1" dir="ltr" style="width:220px">Day 2 - Track 3</td><td></td><td class="s4" dir="ltr" style="font-size: 10px; font-weight: bold;">Intermediate Level</td></tr>
-<tr style='height:20px;'><td class="s5" dir="ltr">07:30</td><td class="s13" dir="ltr" colspan="3" rowspan="6">PyLadies</td><td class="s1" dir="ltr" colspan="3" rowspan="12"></td><td></td><td class="s7" dir="ltr" style="font-size: 10px; font-weight: bold;">Advanced level</td></tr>
+<tr style='height:20px;'><td class="s5" dir="ltr">07:30</td><td class="s13" dir="ltr" colspan="3" rowspan="6" style="vertical-align: bottom;">PyLadies</td><td class="s1" dir="ltr" colspan="3" rowspan="12"></td><td></td><td class="s7" dir="ltr" style="font-size: 10px; font-weight: bold;">Advanced level</td></tr>
 <tr style='height:20px;'><td class="s5" dir="ltr">07:35</td><td></td><td class="s8" dir="ltr" style="font-size: 10px; font-weight: bold;">All Levels</td></tr>
 <tr style='height:20px;'><td class="s5" dir="ltr">07:40</td><td></td><td class="s9" dir="ltr" style="font-size: 10px; font-weight: bold;">Networking, Coffee/Lunch Break, ...</td></tr>
 <tr style='height:20px;'><td class="s5" dir="ltr">07:45</td><td></td><td class="s10" dir="ltr" style="font-size: 10px; font-weight: bold;">Registration</td></tr>
 <tr style='height:20px;'><td class="s5" dir="ltr">07:50</td><td></td><td class="s11" dir="ltr" style="font-size: 10px; font-weight: bold;">Blue Text: Thai Language</td></tr>
 <tr style='height:20px;'><td class="s5" dir="ltr">07:55</td><td></td><td class="s8" dir="ltr" style="background-color:#fff2cc; font-size: 10px; font-weight: bold;;">Other Events</td></tr>
-<tr style='height:20px;'><td class="s5" dir="ltr">08:00</td><td class="s12" dir="ltr" colspan="2" rowspan="12">Registration Opens / Welcome Coffee</td><td class="s13" dir="ltr" rowspan="6">PyLadies</td><td></td><td></td></tr>
+<tr style='height:20px;'><td class="s5" dir="ltr">08:00</td><td class="s13" dir="ltr" colspan="2" rowspan="6"></td><td class="s12" dir="ltr" rowspan="6"></td><td></td><td></td></tr>
 <tr style='height:20px;'><td class="s5" dir="ltr">08:05</td><td></td><td></td></tr>
 <tr style='height:20px;'><td class="s5" dir="ltr">08:10</td><td></td><td></td></tr>
 <tr style='height:20px;'><td class="s5" dir="ltr">08:15</td><td></td><td></td></tr>
 <tr style='height:20px;'><td class="s5" dir="ltr">08:20</td><td></td><td class="s8" dir="ltr"></td></tr>
 <tr style='height:20px;'><td class="s5" dir="ltr">08:25</td><td></td><td class="s8" dir="ltr"></td></tr>
-<tr style='height:20px;'><td class="s5" dir="ltr">08:30</td><td class="s12" dir="ltr" rowspan="6"></td><td class="s12" dir="ltr" colspan="3" rowspan="8">Registration Opens /  Welcome Coffee</td><td></td><td></td></tr>
+<tr style='height:20px;'><td class="s5" dir="ltr">08:30</td><td class="s12" dir="ltr" colspan ="3" rowspan="6">Registration Opens /  Welcome Coffee</td><td class="s12" dir="ltr" colspan="3" rowspan="8">Registration Opens /  Welcome Coffee</td><td></td><td></td></tr>
 <tr style='height:20px;'><td class="s5" dir="ltr">08:35</td><td class="s8" dir="ltr"></td><td></td></tr>
 <tr style='height:20px;'><td class="s5" dir="ltr">08:40</td><td></td><td></td></tr>
 <tr style='height:20px;'><td class="s5" dir="ltr">08:45</td><td></td><td></td></tr>
