add news and welcom submission page

--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -41,6 +41,16 @@
     </div>
 </div>
 
+<!-- news -->
+<div class="section news-section">
+    <div class="news">
+        <h1>News</h1>
+        <p>2018-06-17 09:13 Monty Python quiz</p>
+        <p>2018-06-15 13:00 Reay for the first PyCon Thailand?</p>
+        <p>2018-06-14 16:55 Join Code War event!</p>
+    </div>
+</div>
+
 <!-- keynote -->
 <div class="section second">
     <div class="keynote row">
@@ -95,7 +105,7 @@
     </div>
 </div>
 
-<!-- codewar -->
+<!-- codewar
 <div class="section third">
     <div class="code-war">
         <h1>CODE WAR</h1>
@@ -104,9 +114,9 @@
         Check the Code War page for details.
         </p>
     </div>
-</div>
+</div> -->
 
-<!-- latest new -->
+<!-- latest new
 <div class="section fourth">
     <section class="container section-lastest-news">
         <h2>Lastest News <span>
@@ -158,45 +168,50 @@
             </div>
         </div>
     </section>
-</div>
+</div> -->
 
 <!-- sponsor -->
 <section class="section fifth ">
-    <section class="container sponsor">
-        <h2>Gold Sponsor</h2>
-        <div class="row">
-            <div class="col-sm-4 rounded">
-                <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+    <div class="container">
+        <section class="welcome-submission">
+            <h1>We welcome your submission!</h1>
+        </section>
+        <section class="sponsor">
+            <h2>Gold Sponsor</h2>
+            <div class="row">
+                <div class="col-sm-4 rounded">
+                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                </div>
+                <div class="col-sm-4 rounded">
+                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                </div>
+                <div class="col-sm-4 rounded">
+                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                </div>
+                <div class="col-sm-4 rounded">
+                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                </div>
+                <div class="col-sm-4 rounded">
+                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                </div>
             </div>
-            <div class="col-sm-4 rounded">
-                <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+            <h2>Silver Sponsor</h2>
+            <div class="row">
+                <div class="col-sm-4 rounded">
+                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                </div>
+                <div class="col-sm-4 rounded">
+                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                </div>
+                <div class="col-sm-4 rounded">
+                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                </div>
             </div>
-            <div class="col-sm-4 rounded">
-                <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-            </div>
-            <div class="col-sm-4 rounded">
-                <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-            </div>
-            <div class="col-sm-4 rounded">
-                <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-            </div>
-        </div>
-        <h2>Silver Sponsor</h2>
-        <div class="row">
-            <div class="col-sm-4 rounded">
-                <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-            </div>
-            <div class="col-sm-4 rounded">
-                <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-            </div>
-            <div class="col-sm-4 rounded">
-                <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-            </div>
-        </div>
-    </setion>
+        </setion>
+    </div>
 </section>
 
-<!-- footer -->
+<!-- footer
 <footer>
     <div class="container">
         <div class="row">
@@ -227,4 +242,4 @@
             </div>
         </div>
     </div>
-</footer>
+</footer> -->
