done styling for first page

--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -12,7 +12,32 @@
 
 <!-- frontpage -->
 <div class="section first">
-    <div class="row">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8 offset-sm-2">
+                <div class="main-title">
+                    PyconThailand
+                    <p class="place">
+                        BANGKOK
+                    </p>
+                    <p class="when">
+                        JUNE 15-16 2019
+                    </p>
+                    <p class="edition">
+                        2ND EDITION
+                    </p>
+                </div>
+                <img class="img-responsive" src="/logo2019.png">
+                <p class="invitation">
+                    Pycon is back! Join us for a two day conderence for developers in the heart of Bangkok.
+                </p>
+            </div>
+        </div>
+    </div>
+
+
+
+    <!-- <div class="row">
         <div class="col-sm-3 offset-sm-1">
             <h1>
                 <img class="img-responsive" src="/logo2019.png">
@@ -23,7 +48,7 @@
                 <h2 class="admonition-title">
                     <a href=".">PyCon Thailand 2019</a>
                 </h2>
-                <p class="admonition-date">June 16 & June 17<br>Bangkok</p>
+                <p class="admonition-date">June 15 & June 16<br>Bangkok</p>
                 <ul class="list-inline banner-social-buttons last">
                     <li class="list-inline-item">
                         <a href="https://twitter.com/pyconthailand" class="btn btn-secondary btn-lg" target="_blank">
@@ -38,7 +63,7 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
 
 <!-- news -->
