done news page style

--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -34,95 +34,86 @@
             </div>
         </div>
     </div>
-
-
-
-    <!-- <div class="row">
-        <div class="col-sm-3 offset-sm-1">
-            <h1>
-                <img class="img-responsive" src="/logo2019.png">
-            </h1>
-        </div>
-        <div class="col-sm-6 offset-sm-1">
-            <div class="container admonition admonition-pycon-thailand-2018 text-center" style="background-color: rgba(255,255,255,0.55);">
-                <h2 class="admonition-title">
-                    <a href=".">PyCon Thailand 2019</a>
-                </h2>
-                <p class="admonition-date">June 15 & June 16<br>Bangkok</p>
-                <ul class="list-inline banner-social-buttons last">
-                    <li class="list-inline-item">
-                        <a href="https://twitter.com/pyconthailand" class="btn btn-secondary btn-lg" target="_blank">
-                            <i class="fa fa-twitter fa-fw"></i>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://www.facebook.com/pyconthailand/" class="btn btn-secondary btn-lg" target="_blank">
-                            <i class="fa fa-facebook fa-fw"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div> -->
 </div>
 
 <!-- news -->
 <div class="section news-section">
-    <div class="news">
-        <h1>News</h1>
-        <p>2018-06-17 09:13 Monty Python quiz</p>
-        <p>2018-06-15 13:00 Reay for the first PyCon Thailand?</p>
-        <p>2018-06-14 16:55 Join Code War event!</p>
+    <div class="container">
+        <div class="row">
+            <div class="news col-sm-12">
+                <div class="col-sm-12">
+                    <h1 class="news-title red-underline">News</h1>
+                </div>
+                <div class="col-sm-6 offset-sm-3 schedule">
+                    <p><span class="event-date">2018-06-17 09:13</span> <span class="event-description">Monty Python quiz</span></p>
+                    <p><span class="event-date">2018-06-15 13:00</span> <span class="event-description">Reay for the first PyCon Thailand?</span></p>
+                    <p><span class="event-date">2018-06-14 16:55</span> <span class="event-description">Join Code War event!</span></p>
+                </div>
+            </div>
+            <div class="countdown col-sm-12">
+                <div class="col-sm-12">
+                    <h1 class="countdown-title red-underline">
+                        PYCON THAILAND STARTS IN
+                    </h1>
+                    <h1 class="countdown-timer">
+                        100 days 23 hrs 30 min 10 sec
+                    </h1>
+                    <a href="#" class="btn-primary btn-lg get-ticket-btn">
+                        GET TICKETS
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
 <!-- keynote -->
 <div class="section second">
-    <div class="keynote row">
-        <div class="container">
-        <div class="col-sm-12">
-            <h2 class="keynote-title">Keynote Speakers</h2>
-        </div>
-        <div class="col-sm-12">
-            <section class="row speaker">
-                <div class="col-sm-3">
-                    <img class="img-responsive" src="wes-2017-01-12-small.png">
-                    <p class="name">
-                        Wes Mckinney
-                    </p>
-                    <p class="org">
-                        PANDAS
-                    </p>
-                    <p class="website">
-                        <a href="#">http://wesmckinney.com</a>
-                    </p>
-                </div>
-                <article class="col-sm-8">
-                    <p class="content">
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut,
-                    </p>
-                </article>
-            </section>
-            <section class="row speaker">
-                <div class="col-sm-3">
-                    <img class="img-responsive" src="tiwa-york.jpeg">
-                    <p class="name">
-                        Wes Mckinney
-                    </p>
-                    <p class="org">
-                        KAIDEE<br/>headcoach
-                    </p>
-                    <p class="website">
-                        <a href="#">http://wesmckinney.com</a>
-                    </p>
-                </div>
-                <article class="col-sm-8">
-                    <p class="content">
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut,
-                    </p>
-                </article>
-            </section>
-        </div>
+    <div class="container">
+        <div class="keynote row">
+            <div class="col-sm-12">
+                <h2 class="keynote-title red-underline">Keynote Speakers</h2>
+            </div>
+            <div class="col-sm-12">
+                <section class="row speaker">
+                    <div class="col-sm-3">
+                        <img class="img-responsive" src="wes-2017-01-12-small.png">
+                        <p class="name">
+                            Wes Mckinney
+                        </p>
+                        <p class="org">
+                            PANDAS
+                        </p>
+                        <p class="website">
+                            <a href="#">http://wesmckinney.com</a>
+                        </p>
+                    </div>
+                    <article class="col-sm-8">
+                        <p class="content">
+                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut,
+                        </p>
+                    </article>
+                </section>
+                <section class="row speaker">
+                    <div class="col-sm-3">
+                        <img class="img-responsive" src="tiwa-york.jpeg">
+                        <p class="name">
+                            Wes Mckinney
+                        </p>
+                        <p class="org">
+                            KAIDEE<br/>headcoach
+                        </p>
+                        <p class="website">
+                            <a href="#">http://wesmckinney.com</a>
+                        </p>
+                    </div>
+                    <article class="col-sm-8">
+                        <p class="content">
+                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut,
+                        </p>
+                    </article>
+                </section>
+            </div>
         </div>
         <!--div class="col-sm-2 image-bg">
             <img src="/bg-01.png">
