Fix typo, add img alt attribute

--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -27,9 +27,9 @@
                         2ND EDITION
                     </p>
                 </div>
-                <img class="img-responsive" src="/logo2019.png">
+                <img alt="PyCon 2019 naga logo" class="img-responsive" src="/logo2019.png">
                 <p class="invitation">
-                    Pycon is back! Join us for a two day conderence for developers in the heart of Bangkok.
+                    Pycon is back! Join us for a two day conference for developers in the heart of Bangkok.
                 </p>
             </div>
         </div>
