--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -42,7 +42,7 @@
         <div class="row">
             <div class="news col-sm-12">
                 <div class="col-sm-12">
-                    <h1 class="news-title red-underline">News</h1>
+                    <h1 class="news-title red-followline">News</h1>
                 </div>
                 <div class="col-sm-6 offset-sm-3 schedule">
                     <p><span class="event-date">2018-06-17 09:13</span> <span class="event-description">Monty Python quiz</span></p>
@@ -52,7 +52,7 @@
             </div>
             <div class="countdown col-sm-12">
                 <div class="col-sm-12">
-                    <h1 class="countdown-title red-underline">
+                    <h1 class="countdown-title red-prepostline">
                         PYCON THAILAND STARTS IN
                     </h1>
                     <h1 class="countdown-timer">
@@ -72,7 +72,7 @@
     <div class="container">
         <div class="keynote row">
             <div class="col-sm-12">
-                <h2 class="keynote-title red-underline">Keynote Speakers</h2>
+                <h2 class="keynote-title red-followline">Keynote Speakers</h2>
             </div>
             <div class="col-sm-12">
                 <section class="row speaker">
@@ -115,147 +115,86 @@
                 </section>
             </div>
         </div>
-        <!--div class="col-sm-2 image-bg">
-            <img src="/bg-01.png">
-        </div-->
     </div>
 </div>
 
-<!-- codewar
-<div class="section third">
-    <div class="code-war">
-        <h1>CODE WAR</h1>
-        <p>
-        For everyone who's in town the day before, we're having a fun<br>codewar event on the evening of Friday, 15 June.<br>
-        Check the Code War page for details.
-        </p>
-    </div>
-</div> -->
-
-<!-- latest new
-<div class="section fourth">
-    <section class="container section-lastest-news">
-        <h2>Lastest News <span>
-                <a href="#">View more</a></span></h2>
-        <div class="row">
-            <div class="col-md-3">
-                <div class="rounded">
-                    <h3>
-                        Monty Python quiz
-                    </h3>
-                    <p class="date">2018-06-15 <span class="time">9:10</span></p>
-                    <img src="">
-                    <p class="content">To refresh your memory. here are the titles fo the breaks</p>
-                    <a href="#" class="view-more">(view more)</a>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="rounded">
-                    <h3>
-                        Monty Python quiz
-                    </h3>
-                    <p class="date">2018-06-15 <span class="time">9:10</span></p>
-                    <img src="">
-                    <p class="content">To refresh your memory. here are the titles fo the breaks</p>
-                    <a href="#" class="view-more">(view more)</a>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="rounded">
-                    <h3>
-                        Monty Python quiz
-                    </h3>
-                    <p class="date">2018-06-15 <span class="time">9:10</span></p>
-                    <img src="">
-                    <p class="content">To refresh your memory. here are the titles fo the breaks</p>
-                    <a href="#" class="view-more">(view more)</a>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="rounded">
-                    <h3>
-                        Monty Python quiz
-                    </h3>
-                    <p class="date">2018-06-15 <span class="time">9:10</span></p>
-                    <img src="">
-                    <p class="content">To refresh your memory. here are the titles fo the breaks</p>
-                    <a href="#" class="view-more">(view more)</a>
-                </div>
-            </div>
-        </div>
-    </section>
-</div> -->
-
 <!-- sponsor -->
-<section class="section fifth ">
-    <div class="container">
-        <section class="welcome-submission">
-            <h1>We welcome your submission!</h1>
-        </section>
-        <section class="sponsor">
-            <h2>Gold Sponsor</h2>
-            <div class="row">
-                <div class="col-sm-4 rounded">
-                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                </div>
-                <div class="col-sm-4 rounded">
-                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                </div>
-                <div class="col-sm-4 rounded">
-                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                </div>
-                <div class="col-sm-4 rounded">
-                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                </div>
-                <div class="col-sm-4 rounded">
-                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                </div>
-            </div>
-            <h2>Silver Sponsor</h2>
-            <div class="row">
-                <div class="col-sm-4 rounded">
-                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                </div>
-                <div class="col-sm-4 rounded">
-                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                </div>
-                <div class="col-sm-4 rounded">
-                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                </div>
-            </div>
-        </setion>
-    </div>
-</section>
-
-<!-- footer
-<footer>
+<section class="section sponsor-section fp-auto-height">
     <div class="container">
         <div class="row">
-            <div class="col-md-5 about">
-                <p>About</p>
-                <p>Pycon Thailand is a conference about<br>the programming language Python.<br>
-                It is a community effort driven by <br> the members of the Python Community<br>in Bangkok
-                </p>
-                <ul>
-                    <li>
-                        <a href="#">
-                            <i class="fa-fw fa fa-facebook"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa-fw fa fa-twitter"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-md-2">
-                <img src="logo2019.png">
-            </div>
-            <div class="col-md-5 when-where">
-                <p>June 16 - 17 2018</p>
-                <p>Knowledge Exchange Center - KX<br>10/1 Krung Thonburi Road<br> Khwaeng Bang Lamphu Lang<br>THon Buri Bangkok 10600</p>
-            </div>
+            <section class="welcome-submission col-sm-12">
+                <div class="col-sm-12">
+                    <h1 class="welcome-submission-title red-prepostline">WE WELCOME YOUR SUBMISSION!</h1>
+                    <p class="welcome-submission-text">Join our keynote speakers for the 2nd edition of Pycon Thailand. We're open to submission for papers now!</p>
+                </div>
+                <a href="#" class="btn-primary btn-lg get-ticket-btn">
+                    SUBMIT NOW
+                </a>
+            </section>
+            <section class="sponsor col-sm-12">
+                <h2 class="sponsor-title">GOLD SPONSOR</h2>
+                <div class="row">
+                    <div class="col-sm-4 rounded">
+                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                    </div>
+                    <div class="col-sm-4 rounded">
+                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                    </div>
+                    <div class="col-sm-4 rounded">
+                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                    </div>
+                    <div class="col-sm-4 rounded">
+                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                    </div>
+                    <div class="col-sm-4 rounded">
+                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                    </div>
+                </div>
+                <h2 class="sponsor-title">SILVER SPONSOR</h2>
+                <div class="row">
+                    <div class="col-sm-4 rounded">
+                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                    </div>
+                    <div class="col-sm-4 rounded">
+                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                    </div>
+                    <div class="col-sm-4 rounded">
+                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                    </div>
+                </div>
+            </setion>
         </div>
     </div>
-</footer> -->
+    <!-- footer -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5 about">
+                    <p>About</p>
+                    <p>Pycon Thailand is a conference about<br>the programming language Python.<br>
+                    It is a community effort driven by <br> the members of the Python Community<br>in Bangkok
+                    </p>
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <i class="fa-fw fa fa-facebook"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa-fw fa fa-twitter"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-2">
+                    <img src="logo2019.png">
+                </div>
+                <div class="col-md-5 when-where">
+                    <p>June 16 - 17 2018</p>
+                    <p>Knowledge Exchange Center - KX<br>10/1 Krung Thonburi Road<br> Khwaeng Bang Lamphu Lang<br>THon Buri Bangkok 10600</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+</section>
